--- a/etc/portage/repos.conf/gentoo.conf
+++ b/etc/portage/repos.conf/gentoo.conf
@@ -4,6 +4,6 @@ main-repo = gentoo
 [gentoo]
 location = /usr/portage
 sync-type = git
-sync-uri = https://github.com/gentoo-mirror/gentoo
+sync-uri = https://anongit.gentoo.org/git/repo/gentoo.git
 auto-sync = yes
 sync-depth = 1
