--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -14,8 +14,8 @@ ABI_X86="64"
 
 ADD="mpeg mp3 mp4 ogg vpx x264 x265 schroedinger matroska win32codecs \
      lame flac faac vorbis id3tag taglib \
-     webp gif svg png pdf \
-     archive rar lzo lz4 xz \
+     webp svg gif svg png pdf cbr \
+     archive rar unrar lzo lz4 xz \
      corefonts truetype unicode utf8 \
      device-mapper cryptsetup fat ntfs btrfs f2fs parted \
      graphite lto cilk clang \
