--- a/etc/portage/package.use/10-all.conf
+++ b/etc/portage/package.use/10-all.conf
@@ -17,6 +17,7 @@ dev-java/swt -gnome
 www-client/chromium proprietary-codecs widevine
 www-servers/apache apache2_modules_auth_digest
 net-firewall/firewalld gui
+dev-db/sqlitebrowser qt5
 dev-lang/php mhash ctype filter gd mysqli xmlwriter zip curl pdo
 net-p2p/deluge webinterface console
 net-wireless/aircrack-ng -airdrop-ng
@@ -25,6 +26,7 @@ net-analyzer/nmap zenmap
 net-misc/dropbox librsync-bundled
 net-fs/cifs-utils upcall ads
 sys-libs/tdb python
+sys-libs/ntdb python
 net-fs/samba winbind client gnutls -fam
 net-libs/rb_libtorrent python -geoip
 net-libs/webkit-gtk -gles2 egl
