--- a/etc/portage/package.use/20-gnome.conf
+++ b/etc/portage/package.use/20-gnome.conf
@@ -7,3 +7,4 @@ app-misc/tracker ffmpeg -gstreamer -flac iso mp3 -pdf -vorbis -xml miner-fs -upo
 dev-libs/folks -bluetooth -telepathy -eds
 net-im/empathy -gnome -gnome-online-accounts -map -spell -v4l
 net-im/telepathy-connection-managers -xmpp -irc
+gnome-extra/gnome-builder python
