--- a/etc/portage/package.use/30-portage.conf
+++ b/etc/portage/package.use/30-portage.conf
@@ -52,7 +52,11 @@ x11-libs/wxGTK -gnome
 >=sys-apps/util-linux-2.28.2 abi_x86_32
 >=x11-proto/damageproto-1.2.1-r1 abi_x86_32
 >=sys-apps/systemd-231 abi_x86_32
-# required by www-client/chromium-54.0.2840.34::gentoo
-# required by @selected
-# required by @world (argument)
+
+#other
 >=media-libs/libvpx-1.6.0-r1 svc
+>=sys-devel/flex-2.6.1 abi_x86_32
+>=sys-libs/cracklib-2.9.6-r1 abi_x86_32
+>=sys-libs/db-6.0.35 abi_x86_32
+>=virtual/pam-0-r1 abi_x86_32
+>=sys-libs/pam-1.3.0 abi_x86_32
