--- a/etc/portage/package.use/30-portage.conf
+++ b/etc/portage/package.use/30-portage.conf
@@ -60,3 +60,4 @@ x11-libs/wxGTK -gnome
 >=sys-libs/db-6.0.35 abi_x86_32
 >=virtual/pam-0-r1 abi_x86_32
 >=sys-libs/pam-1.3.0 abi_x86_32
+>=dev-libs/openssl-1.0.2j abi_x86_32
