update system config

--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -48,7 +48,7 @@ VIDEO_CARDS="nvidia"
 INPUT_DEVICES="libinput"
 GRUB_PLATFORMS="pc"
 
-FEATURES="parallel-fetch parallel-install userfetch cgroup nodoc clean-logs fail-clean"
+FEATURES="parallel-fetch parallel-install userfetch news sandbox cgroup nodoc clean-logs fail-clean"
 EMERGE_DEFAULT_OPTS='--quiet-build y --jobs 3 --load-average 4 --deep --keep-going \
                     --verbose --verbose-conflicts --with-bdeps y --autounmask-continue --autounmask-write --complete-graph'
 AUTOCLEAN="yes"
