--- a/etc/portage/package.use/30-portage.conf
+++ b/etc/portage/package.use/30-portage.conf
@@ -61,3 +61,12 @@ x11-libs/wxGTK -gnome
 >=virtual/pam-0-r1 abi_x86_32
 >=sys-libs/pam-1.3.0 abi_x86_32
 >=dev-libs/openssl-1.0.2j abi_x86_32
+# required by dev-libs/nettle-3.3::gentoo[gmp]
+# required by media-libs/mesa-13.0.1::gentoo[nettle]
+# required by x11-libs/cairo-1.14.6::gentoo[opengl]
+# required by @__auto_slot_operator_replace_installed__ (argument)
+>=dev-libs/gmp-6.1.1 abi_x86_32
+# required by media-libs/mesa-13.0.1::gentoo[nettle]
+# required by x11-libs/cairo-1.14.6::gentoo[opengl]
+# required by @__auto_slot_operator_replace_installed__ (argument)
+>=dev-libs/nettle-3.3 abi_x86_32
