--- a/etc/locale.conf
+++ b/etc/locale.conf
@@ -1,2 +1,5 @@
-LANG=en_GB.UTF-8
-LC_ALL=en_GB.UTF-8
+# Configuration file for eselect
+# This file has been automatically generated.
+LANG="en_GB.utf8"
+LC_COLLATE="C"
+
