--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -1,35 +1,29 @@
 ARCH="native"
 CORES=4
-
 CFLAGS="-O2 -march=$ARCH -mtune=$ARCH -pipe"
 CXXFLAGS="${CFLAGS}"
 FCFLAGS="${CFLAGS}"
 FFLAGS="${CFLAGS}"
-
 LDFLAGS="-Wl,-O1 -Wl,--as-needed,--hash-style=gnu -fuse-linker-plugin"
-
 CHOST="x86_64-pc-linux-gnu"
-
 ABI_X86="64"
 
-ADD="mpeg mp3 mp4 ogg vpx x264 x265 schroedinger matroska win32codecs \
-     lame flac faac vorbis id3tag taglib \
-     webp svg gif svg png pdf cbr \
+ADD="mpeg mp4 vpx x264 x265 matroska win32codecs lame mp3 flac faac vorbis \
+     webp svg gif svg png pdf \
      archive rar unrar lzo lz4 xz \
      corefonts truetype unicode utf8 \
-     device-mapper cryptsetup fat ntfs btrfs f2fs parted \
-     graphite lto cilk clang \
-     experimental custom-cflags optimization strong-optimization \
+     device-mapper cryptsetup fat ntfs btrfs parted \
+     graphite lto cilk clang experimental custom-cflags optimization strong-optimization \
      egl dri3 glamor vdpau xwayland wayland wayland-compositor libinput \
-     systemd pulseaudio bluetooth firewalld symlink firmware \
+     systemd pulseaudio bluetooth symlink firmware \
      nautilus gvfs gtk3 gtkstyle \
-     ipv6 ssh samba aio \
-     gpt git mercurial\
-     offensive latex vim vim-synthax chromecast system-*"
+     ipv6 conntrack nftables netlink ssh samba aio gpt git mercurial \
+     offensive vim vim-synthax chromecast system-*"
+
 REMOVE="-cdio -kdbus -perl -recode -snappy -cdda -cddb -dvdr -dvd -upnp -dvdnav -modemmanager -ppp -accessibility -telepathy -wxwidgets -eds \
       -guile -aalib -a52 -v4l -v4l2 -deprecated -bindist -consolekit -radeon -r300 -nokia -wicd -cups \
       -static-analyzer -networkmanager -gnome2 -gtk2 -laptop -mono -msn -icq -isdn -macosx -ipod -cdr -xinerama \
-      -xscreensaver -kde -gconf -qt -qt3 -qt3support -qt4 -hplip -foomatic -foomaticdb -ruby \
+      -xscreensaver -kde -gconf -qt -qt3 -qt3support -qt4 -qt5 -hplip -foomatic -foomaticdb -ruby \
       -tk -tcl -wifi -bidi -quvi -lua -luajit -pch -test -gsm -espeak -extras -doc -examples \
       -avahi -real -32bit -zeroconf -geolocation -accessibility -aim -cdparanoia -cdinstall  \
       -orc -dga -foomatic -gpm -pcmcia -ppp -slang \
@@ -46,14 +40,14 @@ LINGUAS="en"
 L10N="en en_GB en-GB"
 VIDEO_CARDS="nvidia"
 INPUT_DEVICES="libinput"
-GRUB_PLATFORMS="pc"
+GRUB_PLATFORMS="efi-64 pc"
 
 FEATURES="parallel-fetch parallel-install userfetch news sandbox cgroup nodoc clean-logs fail-clean"
+#EMERGE_DEFAULT_OPTS='--quiet-build y --jobs 3 --load-average 4 --deep --keep-going \
 EMERGE_DEFAULT_OPTS='--quiet-build y --jobs 3 --load-average 4 --deep --keep-going \
-                    --verbose --verbose-conflicts --with-bdeps y --autounmask-continue --autounmask-write --complete-graph'
+                    --verbose --verbose-conflicts --with-bdeps y --autounmask-write --complete-graph'
 AUTOCLEAN="yes"
 COLLISION_IGNORE="/"
-
 ACCEPT_KEYWORDS="amd64 ~amd64"
 ACCEPT_LICENSE="*"
 ACCEPT_PROPERTIES="*"
@@ -63,23 +57,17 @@ PORTAGE_COMPRESS_FLAGS="-9e"
 PORTAGE_RSYNC_RETRIES="15"
 PORTAGE_NICENESS=10
 PORTAGE_IONICE_COMMAND="ionice -c3 -p \$\{PID\}"
-PORTAGE_TMPDIR="/tmp"
-PORT_LOGDIR="/var/log/portage"
+PORTAGE_TMPDIR="/var/tmp"
+PORT_LOGDIR="/var/tmp/"
 PORTAGE_ELOG_CLASSES="log warn error"
 PORT_LOGDIR_CLEAN="find \"\${PORT_LOGDIR}\" -type f ! -name \"summary.log*\" -mtime +3 -delete"
 
 #FETCHCOMMAND="${FETCHCOMMAND} --limit-rate=100k"
 #RESUMECOMMAND="${RESUMECOMMAND} --limit-rate=100k"
-GENTOO_MIRRORS="ftp://ftp-stud.hs-esslingen.de/pub/Mirrors/gentoo/ rsync://gentoo.prz.rzeszow.pl/gentoo http://gentoo.supp.name/"
-
-#CCACHE_SIZE="4G"
-#CCACHE_DIR="/home/paradox/.ccache"
-
-#DISTCC_DIR="/var/tmp/portage/.distcc/"
 
 LC_MESSAGES=C
 
 USE_PYTHON='3.5 2.7'
 PYTHON_TARGETS="python3_5 python2_7"
 PYTHON_SINGLE_TARGET="python3_5"
-RUBY_TARGETS="ruby23"
+RUBY_TARGETS="ruby24"
