--- a/etc/sysctl.conf
+++ b/etc/sysctl.conf
@@ -72,8 +72,8 @@ net.ipv4.tcp_max_syn_backlog = 4096
 net.ipv4.ip_forward = 0
 net.ipv4.conf.all.forwarding = 0
 net.ipv4.conf.default.forwarding = 0
-net.ipv6.conf.all.forwarding = 0
-net.ipv6.conf.default.forwarding = 0
+net.ipv6.conf.all.forwarding = 1
+net.ipv6.conf.default.forwarding = 1
 
 # Disables IP source routing
 net.ipv4.conf.all.send_redirects = 0
@@ -86,6 +86,8 @@ net.ipv6.conf.default.accept_source_route = 0
 # Enable IP spoofing protection, turn on source route verification
 net.ipv4.conf.all.rp_filter = 1
 net.ipv4.conf.default.rp_filter = 1
+#net.ipv6.conf.default.rp_filter = 1
+#net.ipv6.conf.all.rp_filter = 1
 
 # Disable ICMP Redirect Acceptance
 net.ipv4.conf.all.accept_redirects = 0
@@ -186,8 +188,8 @@ net.ipv4.tcp_max_orphans = 16384
 net.ipv4.tcp_orphan_retries = 0
 
 # Increase the maximum memory used to reassemble IP fragments
-net.ipv4.ipfrag_high_thresh = 512000
-net.ipv4.ipfrag_low_thresh = 446464
+#net.ipv4.ipfrag_high_thresh = 512000
+#net.ipv4.ipfrag_low_thresh = 446464
 
 # don't cache ssthresh from previous connection
 net.ipv4.tcp_no_metrics_save = 1
