update portage config

--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -1,23 +1,19 @@
-ARCH="native"
-CORES=4
-CFLAGS="-O2 -march=$ARCH -mtune=$ARCH -pipe"
+CFLAGS="-O2 -march=native -mtune=native -pipe"
 CXXFLAGS="${CFLAGS}"
-FCFLAGS="${CFLAGS}"
-FFLAGS="${CFLAGS}"
 LDFLAGS="-Wl,-O1 -Wl,--as-needed,--hash-style=gnu -fuse-linker-plugin"
 CHOST="x86_64-pc-linux-gnu"
 ABI_X86="64"
 
 ADD="mpeg mp4 vpx x264 x265 matroska win32codecs lame mp3 flac faac vorbis \
-     webp svg gif svg png pdf \
+     webp gif svg png pdf \
      archive rar unrar lzo lz4 xz \
      corefonts truetype unicode utf8 \
-     device-mapper cryptsetup fat ntfs btrfs parted \
+     device-mapper cryptsetup fat ntfs btrfs parted gpt aio ssh samba \
      graphite lto cilk clang experimental custom-cflags optimization strong-optimization \
      egl dri3 glamor vdpau xwayland wayland wayland-compositor libinput \
-     systemd pulseaudio bluetooth symlink firmware \
+     symlink firmware ipv6 conntrack nftables netlink git mercurial \
+     systemd pulseaudio bluetooth \
      nautilus gvfs gtk3 gtkstyle \
-     ipv6 conntrack nftables netlink ssh samba aio gpt git mercurial \
      offensive vim vim-synthax chromecast system-*"
 REMOVE="-cdio -kdbus -perl -recode -snappy -cdda -cddb -dvdr -dvd -upnp -dvdnav -modemmanager -ppp -accessibility -telepathy -wxwidgets -eds \
       -guile -aalib -a52 -v4l -v4l2 -deprecated -bindist -consolekit -radeon -r300 -nokia -wicd -cups \
@@ -30,26 +26,23 @@ REMOVE="-cdio -kdbus -perl -recode -snappy -cdda -cddb -dvdr -dvd -upnp -dvdnav 
       -google -spice -gnome-online-accounts -printsupport -libnotify -ldap \
       -python_targets_pypy"
 USE="${REMOVE} ${ADD}"
-
 # install cpuinfo2cpuflags-x86
 CPU_FLAGS_X86="aes avx mmx mmxext popcnt sse sse2 sse3 sse4_1 sse4_2 ssse3"
 
-MAKEOPTS="-j$CORES -l4"
+FEATURES="parallel-fetch parallel-install userfetch news sandbox cgroup nodoc clean-logs fail-clean"
+EMERGE_DEFAULT_OPTS='--quiet-build y --jobs 3 --load-average 4 --deep --keep-going \
+                    --verbose --verbose-conflicts --with-bdeps y --autounmask-write --complete-graph'
+MAKEOPTS="-j5 -l4"
 LINGUAS="en"
 L10N="en en_GB en-GB"
 VIDEO_CARDS="nvidia"
 INPUT_DEVICES="libinput"
 GRUB_PLATFORMS="efi-64 pc"
-
-FEATURES="parallel-fetch parallel-install userfetch news sandbox cgroup nodoc clean-logs fail-clean"
-EMERGE_DEFAULT_OPTS='--quiet-build y --jobs 3 --load-average 4 --deep --keep-going \
-                    --verbose --verbose-conflicts --with-bdeps y --autounmask-write --complete-graph'
 AUTOCLEAN="yes"
 COLLISION_IGNORE="/"
 ACCEPT_KEYWORDS="amd64 ~amd64"
 ACCEPT_LICENSE="*"
 ACCEPT_PROPERTIES="*"
-
 PORTAGE_COMPRESS="xz"
 PORTAGE_COMPRESS_FLAGS="-9e"
 PORTAGE_RSYNC_RETRIES="15"
@@ -62,9 +55,8 @@ PORT_LOGDIR_CLEAN="find \"\${PORT_LOGDIR}\" -type f ! -name \"summary.log*\" -mt
 #FETCHCOMMAND="${FETCHCOMMAND} --limit-rate=100k"
 #RESUMECOMMAND="${RESUMECOMMAND} --limit-rate=100k"
 
-LC_MESSAGES=C
-
 USE_PYTHON='3.5 2.7'
 PYTHON_TARGETS="python3_5 python2_7"
 PYTHON_SINGLE_TARGET="python3_5"
 RUBY_TARGETS="ruby24"
+LC_MESSAGES=C
