--- a/etc/portage/repos.conf/steam-overlay.conf
+++ b/etc/portage/repos.conf/steam-overlay.conf
@@ -6,4 +6,4 @@ location = /var/lib/repos/steam-overlay
 sync-type = git
 sync-uri = https://github.com/anyc/steam-overlay.git
 auto-sync = yes
-sync-depth = 1
+clone-depth = 1
