--- a/etc/portage/repos.conf/systemd.conf
+++ b/etc/portage/repos.conf/systemd.conf
@@ -6,4 +6,4 @@ location = /var/lib/repos/systemd
 sync-type = git
 sync-uri = git://anongit.gentoo.org/user/systemd.git
 auto-sync = yes
-sync-depth = 1
+clone-depth = 1
