--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -13,17 +13,17 @@ ADD="mpeg mp4 vpx x264 x265 matroska win32codecs lame mp3 flac faac vorbis \
      egl dri3 glamor vdpau xwayland wayland wayland-compositor libinput \
      symlink firmware ipv6 conntrack nftables netlink git mercurial \
      systemd pulseaudio bluetooth \
-     nautilus gvfs gtk3 gtkstyle \
+     nautilus gvfs gtk3 gtkstyle -avahi \
      offensive vim vim-synthax chromecast system-*"
 REMOVE="-cdio -kdbus -perl -recode -snappy -cdda -cddb -dvdr -dvd -upnp -dvdnav -modemmanager -ppp -accessibility -telepathy -wxwidgets -eds \
       -guile -aalib -a52 -v4l -v4l2 -deprecated -bindist -consolekit -radeon -r300 -nokia -wicd -cups \
       -static-analyzer -networkmanager -gnome2 -gtk2 -laptop -mono -msn -icq -isdn -macosx -ipod -cdr -xinerama \
       -xscreensaver -kde -gconf -qt -qt3 -qt3support -qt4 -qt5 -hplip -foomatic -foomaticdb -ruby \
       -tk -tcl -wifi -bidi -quvi -lua -luajit -pch -test -gsm -espeak -extras -doc -examples \
-      -avahi -real -32bit -zeroconf -geolocation -accessibility -aim -cdparanoia -cdinstall  \
-      -orc -dga -foomatic -gpm -pcmcia -ppp -slang \
+      -real -32bit -zeroconf -geolocation -accessibility -aim -cdparanoia -cdinstall  \
+      -mtp -orc -dga -foomatic -gpm -pcmcia -ppp -slang \
       -emacs -crashreporter -debug -oss -scanner -quicktime -ibm -ios -ipod -evo \
-      -google -spice -gnome-online-accounts -printsupport -libnotify -ldap \
+      -google -spice -gnome-online-accounts -printsupport -libnotify \
       -python_targets_pypy"
 USE="${REMOVE} ${ADD}"
 # install cpuinfo2cpuflags-x86
@@ -55,8 +55,8 @@ PORT_LOGDIR_CLEAN="find \"\${PORT_LOGDIR}\" -type f ! -name \"summary.log*\" -mt
 #FETCHCOMMAND="${FETCHCOMMAND} --limit-rate=100k"
 #RESUMECOMMAND="${RESUMECOMMAND} --limit-rate=100k"
 
-USE_PYTHON='3.5 2.7'
-PYTHON_TARGETS="python3_5 python2_7"
+USE_PYTHON='3.6 3.5 2.7'
+PYTHON_TARGETS="python3_6 python3_5 python2_7"
 PYTHON_SINGLE_TARGET="python3_5"
 RUBY_TARGETS="ruby24"
 LC_MESSAGES=C
