--- a/etc/portage/repos.conf/gnome.conf
+++ b/etc/portage/repos.conf/gnome.conf
@@ -6,4 +6,4 @@ location = /var/lib/repos/gnome
 sync-type = git
 sync-uri = git://anongit.gentoo.org/proj/gnome.git
 auto-sync = yes
-sync-depth = 1
+clone-depth = 1
