--- a/etc/portage/repos.conf/pentoo.conf
+++ b/etc/portage/repos.conf/pentoo.conf
@@ -6,4 +6,4 @@ location = /var/lib/repos/pentoo
 sync-type = git
 sync-uri = https://github.com/pentoo/pentoo-overlay
 auto-sync = yes
-sync-depth = 1
+clone-depth = 1
