--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -2,42 +2,42 @@ CFLAGS="-O2 -march=native -mtune=native -pipe"
 CXXFLAGS="${CFLAGS}"
 LDFLAGS="-Wl,-O1 -Wl,--as-needed,--hash-style=gnu -fuse-linker-plugin"
 CHOST="x86_64-pc-linux-gnu"
-ABI_X86="64"
-
-ADD="mpeg mp4 vpx x264 x265 matroska win32codecs lame mp3 flac faac vorbis \
-     webp gif svg png pdf \
-     archive rar unrar lzo lz4 xz \
-     corefonts truetype unicode utf8 \
-     device-mapper cryptsetup fat ntfs btrfs parted gpt aio ssh samba \
-     graphite lto cilk clang experimental custom-cflags optimization strong-optimization \
-     egl dri3 glamor vdpau xwayland wayland wayland-compositor libinput \
-     symlink firmware ipv6 conntrack nftables netlink git mercurial \
-     systemd pulseaudio bluetooth \
-     nautilus gvfs gtk3 gtkstyle -avahi \
-     offensive vim vim-synthax chromecast system-*"
-REMOVE="-cdio -kdbus -perl -recode -snappy -cdda -cddb -dvdr -dvd -upnp -dvdnav -modemmanager -ppp -accessibility -telepathy -wxwidgets -eds \
-      -guile -aalib -a52 -v4l -v4l2 -deprecated -bindist -consolekit -radeon -r300 -nokia -wicd -cups \
-      -static-analyzer -networkmanager -gnome2 -gtk2 -laptop -mono -msn -icq -isdn -macosx -ipod -cdr -xinerama \
-      -xscreensaver -kde -gconf -qt -qt3 -qt3support -qt4 -qt5 -hplip -foomatic -foomaticdb -ruby \
-      -tk -tcl -wifi -bidi -quvi -lua -luajit -pch -test -gsm -espeak -extras -doc -examples \
-      -real -32bit -zeroconf -geolocation -accessibility -aim -cdparanoia -cdinstall  \
-      -mtp -orc -dga -foomatic -gpm -pcmcia -ppp -slang \
-      -emacs -crashreporter -debug -oss -scanner -quicktime -ibm -ios -ipod -evo \
-      -google -spice -gnome-online-accounts -printsupport -libnotify \
-      -python_targets_pypy"
-USE="${REMOVE} ${ADD}"
 # install cpuinfo2cpuflags-x86
 CPU_FLAGS_X86="aes avx mmx mmxext popcnt sse sse2 sse3 sse4_1 sse4_2 ssse3"
+ABI_X86="64"
+
+ADD="mpeg mp4 vpx x264 x265 10bit matroska win32codecs lame mp3 flac faac opus vorbis \
+	webp gif svg png pdf djvu \
+	archive rar unrar lzo lz4 xz \
+	corefonts truetype unicode utf8 \
+	device-mapper cryptsetup ssp pie fat ntfs btrfs parted gpt aio ssh samba \
+	graphite lto cilk clang experimental custom-cflags \
+	osmesa egl dri3 glamor vdpau xwayland wayland wayland-compositor libinput \
+	symlink firmware ipv6 conntrack nftables netlink git \
+	systemd pulseaudio iproute2 \
+	ibus nautilus gvfs gtk3 meson \
+	ffensive vim vim-synthax system-*"
+REMOVE="-cdio -kdbus -perl -recode -snappy -cdda -cddb -dvdr -dvd -upnp -dvdnav -modemmanager -ppp -accessibility -telepathy -wxwidgets -eds \
+	-guile -aalib -a52 -v4l -v4l2 -deprecated -bindist -consolekit -radeon -r300 -nokia -wicd \
+	-static-analyzer -networkmanager -gnome2 -gtk2 -laptop -mono -msn -icq -isdn -macosx -ipod -cdr -xinerama -cups \
+	-xscreensaver -kde -gconf -qt -qt3 -qt3support -qt4 -qt5 -hplip -foomatic -foomaticdb -ruby \
+	-tk -tcl -wifi -bidi -quvi -lua -luajit -pch -test -gsm -espeak -extras -doc -examples \
+	-bluetooth -real -32bit -zeroconf -geolocation -accessibility -aim -cdparanoia -cdinstall  \
+	-mtp -orc -dga -foomatic -gpm -avahi -pcmcia -ppp -slang \
+	-emacs -crashreporter -debug -oss -scanner -quicktime -ibm -ios -ipod -evo \
+	-google -spice -gnome-online-accounts -printsupport -libnotify -awt -javafx \
+	-smartcard -python_targets_pypy -http"
+USE="${REMOVE} ${ADD}"
 
 FEATURES="parallel-fetch parallel-install userfetch news sandbox cgroup nodoc clean-logs fail-clean"
 EMERGE_DEFAULT_OPTS='--quiet-build y --jobs 3 --load-average 5 --deep --keep-going \
-                    --verbose --verbose-conflicts --with-bdeps y --autounmask-write --complete-graph'
+				--verbose --verbose-conflicts --with-bdeps y --autounmask-write --autounmask-keep-masks n --complete-graph'
 MAKEOPTS="-j5 -l5"
 LINGUAS="en"
 L10N="en en_GB en-GB"
 VIDEO_CARDS="nvidia"
 INPUT_DEVICES="libinput"
-GRUB_PLATFORMS="efi-64 pc"
+GRUB_PLATFORMS="efi-64"
 AUTOCLEAN="yes"
 COLLISION_IGNORE="/"
 ACCEPT_KEYWORDS="amd64 ~amd64"
@@ -52,11 +52,12 @@ PORTAGE_TMPDIR="/var/tmp"
 PORTAGE_ELOG_CLASSES="log warn error"
 PORT_LOGDIR="/var/tmp/"
 PORT_LOGDIR_CLEAN="find \"\${PORT_LOGDIR}\" -type f ! -name \"summary.log*\" -mtime +3 -delete"
+DISTDIR="/home/hexvar/Downloads/tmp/distfiles"
 #FETCHCOMMAND="${FETCHCOMMAND} --limit-rate=100k"
 #RESUMECOMMAND="${RESUMECOMMAND} --limit-rate=100k"
 
-USE_PYTHON='3.6 3.5 2.7'
-PYTHON_TARGETS="python3_6 python3_5 python2_7"
+USE_PYTHON='3.6 2.7'
+PYTHON_TARGETS="python3_5 python3_6 python2_7"
 PYTHON_SINGLE_TARGET="python3_5"
 RUBY_TARGETS="ruby24"
 LC_MESSAGES=C
