--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -2,7 +2,7 @@ CFLAGS="-O2 -march=native -mtune=native -pipe"
 CXXFLAGS="${CFLAGS}"
 LDFLAGS="-Wl,-O1 -Wl,--as-needed,--hash-style=gnu -fuse-linker-plugin"
 CHOST="x86_64-pc-linux-gnu"
-# install cpuinfo2cpuflags-x86
+# install cpuid2cpuflags
 CPU_FLAGS_X86="aes avx mmx mmxext popcnt sse sse2 sse3 sse4_1 sse4_2 ssse3"
 ABI_X86="64"
 
@@ -32,7 +32,7 @@ USE="${REMOVE} ${ADD}"
 FEATURES="parallel-fetch parallel-install userfetch news sandbox cgroup nodoc clean-logs fail-clean"
 EMERGE_DEFAULT_OPTS='--quiet-build y --jobs 3 --load-average 5 --deep --keep-going \
 				--verbose --verbose-conflicts --with-bdeps y --autounmask-write --autounmask-keep-masks n --complete-graph'
-MAKEOPTS="-j5 -l5"
+MAKEOPTS="-j4 -l4"
 LINGUAS="en"
 L10N="en en_GB en-GB"
 VIDEO_CARDS="nvidia"
@@ -52,7 +52,7 @@ PORTAGE_TMPDIR="/var/tmp"
 PORTAGE_ELOG_CLASSES="log warn error"
 PORT_LOGDIR="/var/tmp/"
 PORT_LOGDIR_CLEAN="find \"\${PORT_LOGDIR}\" -type f ! -name \"summary.log*\" -mtime +3 -delete"
-DISTDIR="/home/hexvar/Downloads/tmp/distfiles"
+DISTDIR="/home/hexec/Downloads/tmp/distfiles"
 #FETCHCOMMAND="${FETCHCOMMAND} --limit-rate=100k"
 #RESUMECOMMAND="${RESUMECOMMAND} --limit-rate=100k"
 
