--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -8,22 +8,20 @@ ABI_X86="64"
 
 ADD="mpeg mp4 vpx x264 x265 10bit matroska win32codecs lame mp3 flac faac opus vorbis \
 	webp gif svg png pdf djvu \
-	archive rar unrar lzo lz4 xz \
-	corefonts truetype unicode utf8 \
+	archive rar unrar lz4 xz \
 	device-mapper cryptsetup ssp pie fat ntfs btrfs parted gpt aio ssh samba \
-	graphite lto cilk clang experimental custom-cflags \
-	osmesa egl dri3 glamor vdpau xwayland wayland wayland-compositor libinput \
-	symlink firmware ipv6 conntrack nftables netlink git \
-	systemd pulseaudio iproute2 \
-	ibus nautilus gvfs gtk3 meson \
-	ffensive vim vim-synthax system-*"
+	graphite lto clang experimental custom-cflags \
+	osmesa egl dri3 glamor vdpau xwayland wayland wayland-compositor \
+	symlink firmware ipv6 conntrack nftables netlink git iproute2 \
+	systemd pulseaudio ibus nautilus gvfs gtk3 meson \
+	offensive vim vim-synthax system-*"
 REMOVE="-cdio -kdbus -perl -recode -snappy -cdda -cddb -dvdr -dvd -upnp -dvdnav -modemmanager -ppp -accessibility -telepathy -wxwidgets -eds \
 	-guile -aalib -a52 -v4l -v4l2 -deprecated -bindist -consolekit -radeon -r300 -nokia -wicd \
 	-static-analyzer -networkmanager -gnome2 -gtk2 -laptop -mono -msn -icq -isdn -macosx -ipod -cdr -xinerama -cups \
 	-xscreensaver -kde -gconf -qt -qt3 -qt3support -qt4 -qt5 -hplip -foomatic -foomaticdb -ruby \
 	-tk -tcl -wifi -bidi -quvi -lua -luajit -pch -test -gsm -espeak -extras -doc -examples \
 	-bluetooth -real -32bit -zeroconf -geolocation -accessibility -aim -cdparanoia -cdinstall  \
-	-mtp -orc -dga -foomatic -gpm -avahi -pcmcia -ppp -slang \
+	-sendmail -mtp -orc -dga -foomatic -gpm -avahi -pcmcia -ppp -slang \
 	-emacs -crashreporter -debug -oss -scanner -quicktime -ibm -ios -ipod -evo \
 	-google -spice -gnome-online-accounts -printsupport -libnotify -awt -javafx \
 	-smartcard -python_targets_pypy -http"
@@ -57,7 +55,7 @@ DISTDIR="/home/hexec/Downloads/tmp/distfiles"
 #RESUMECOMMAND="${RESUMECOMMAND} --limit-rate=100k"
 
 USE_PYTHON='3.6 2.7'
-PYTHON_TARGETS="python3_5 python3_6 python2_7"
-PYTHON_SINGLE_TARGET="python3_5"
+PYTHON_TARGETS="python3_6 python2_7"
+PYTHON_SINGLE_TARGET="python3_6"
 RUBY_TARGETS="ruby24"
 LC_MESSAGES=C
