--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -1,40 +1,48 @@
-CFLAGS="-O2 -march=native -mtune=native -pipe"
+MARCH="native"
+GRAPHITE="-fgraphite-identity -floop-interchange -ftree-loop-distribution -floop-strip-mine -floop-block"
+FLTO="-flto=4"
+BASEFLAGS="-march=${MARCH} -mtune=${MARCH} -O2 -fomit-frame-pointer -pipe"
+AR=gcc-ar
+NM=gcc-nm
+RANLIB=gcc-ranlib
+ABI_X86="64"
+CFLAGS="${BASEFLAGS} ${GRAPHITE} ${FLTO}"
 CXXFLAGS="${CFLAGS}"
 LDFLAGS="-Wl,-O1 -Wl,--as-needed,--hash-style=gnu -fuse-linker-plugin"
 CHOST="x86_64-pc-linux-gnu"
+MAKEOPTS="-j4 -l4"
 # install cpuid2cpuflags
 CPU_FLAGS_X86="aes avx mmx mmxext popcnt sse sse2 sse3 sse4_1 sse4_2 ssse3"
-ABI_X86="64"
 
-ADD="mpeg mp4 vpx x264 x265 10bit matroska win32codecs lame mp3 flac faac opus vorbis \
+ADD="${CPU_FLAGX_X86}
+	mpeg mp4 vpx x264 x265 10bit matroska win32codecs lame mp3 flac faac opus vorbis openh264 \
 	webp gif svg png pdf djvu \
 	archive rar unrar lz4 xz \
-	device-mapper cryptsetup ssp pie fat ntfs btrfs parted gpt aio ssh samba \
-	graphite lto clang experimental custom-cflags \
-	osmesa egl dri3 glamor vdpau xwayland wayland wayland-compositor \
-	symlink firmware ipv6 conntrack nftables netlink git iproute2 \
-	systemd pulseaudio ibus nautilus gvfs gtk3 meson \
-	offensive vim vim-synthax system-*"
-REMOVE="-cdio -kdbus -perl -recode -snappy -cdda -cddb -dvdr -dvd -upnp -dvdnav -modemmanager -ppp -accessibility -telepathy -wxwidgets -eds \
-	-guile -aalib -a52 -v4l -v4l2 -deprecated -bindist -consolekit -radeon -r300 -nokia -wicd \
-	-static-analyzer -networkmanager -gnome2 -gtk2 -laptop -mono -msn -icq -isdn -macosx -ipod -cdr -xinerama -cups \
+	device-mapper cryptsetup gpt fat ntfs btrfs parted aio \
+	graphite pie ssp lto cilk clang experimental custom-cflags \
+	egl dri3 vdpau xwayland wayland wayland-compositor \
+	conntrack nftables netlink iproute2 samba ssh git meson \
+	systemd pulseaudio firmware symlink libinput ibus nautilus gvfs gtk3 vim system-* chromium"
+REMOVE="-fam -cdio -kdbus -perl -recode -snappy -cdda -cddb -dvdr -dvd -upnp -dvdnav -modemmanager -ppp -accessibility \
+	-glamor -guile -aalib -a52 -v4l -v4l2 -deprecated -bindist -consolekit -radeon -r300 -nokia -wicd \
+	-static-analyzer -networkmanager -gnome2 -gtk2 -laptop -mono -msn -icq -isdn -macosx -ipod -cdr -xinerama \
 	-xscreensaver -kde -gconf -qt -qt3 -qt3support -qt4 -qt5 -hplip -foomatic -foomaticdb -ruby \
 	-tk -tcl -wifi -bidi -quvi -lua -luajit -pch -test -gsm -espeak -extras -doc -examples \
 	-bluetooth -real -32bit -zeroconf -geolocation -accessibility -aim -cdparanoia -cdinstall  \
-	-sendmail -mtp -orc -dga -foomatic -gpm -avahi -pcmcia -ppp -slang \
+	-sendmail -mtp -orc -dga -foomatic -gpm -avahi -pcmcia -ppp -slang -telepathy -wxwidgets -eds \
 	-emacs -crashreporter -debug -oss -scanner -quicktime -ibm -ios -ipod -evo \
-	-google -spice -gnome-online-accounts -printsupport -libnotify -awt -javafx \
+	-google -spice -gnome-online-accounts -printsupport -cups -libnotify -awt -javafx \
 	-smartcard -python_targets_pypy -http"
 USE="${REMOVE} ${ADD}"
 
-FEATURES="parallel-fetch parallel-install userfetch news sandbox cgroup nodoc clean-logs fail-clean"
+FEATURES="parallel-fetch parallel-install userfetch news sandbox cgroup nodoc" # clean-logs fail-clean"
 EMERGE_DEFAULT_OPTS='--quiet-build y --jobs 3 --load-average 5 --deep --keep-going \
-				--verbose --verbose-conflicts --with-bdeps y --autounmask-write --autounmask-keep-masks n --complete-graph'
-MAKEOPTS="-j4 -l4"
+--verbose --verbose-conflicts --with-bdeps y --complete-graph --autounmask y --autounmask-write y --autounmask-keep-masks y'
 LINGUAS="en"
 L10N="en en_GB en-GB"
 VIDEO_CARDS="nvidia"
 INPUT_DEVICES="libinput"
+FONT_VARIANTS="default term type"
 GRUB_PLATFORMS="efi-64"
 AUTOCLEAN="yes"
 COLLISION_IGNORE="/"
@@ -53,9 +61,9 @@ PORT_LOGDIR_CLEAN="find \"\${PORT_LOGDIR}\" -type f ! -name \"summary.log*\" -mt
 DISTDIR="/home/hexec/Downloads/tmp/distfiles"
 #FETCHCOMMAND="${FETCHCOMMAND} --limit-rate=100k"
 #RESUMECOMMAND="${RESUMECOMMAND} --limit-rate=100k"
-
-USE_PYTHON='3.6 2.7'
-PYTHON_TARGETS="python3_6 python2_7"
+USE_PYTHON='3.6'
+PYTHON_TARGETS="python3_6"
 PYTHON_SINGLE_TARGET="python3_6"
 RUBY_TARGETS="ruby24"
 LC_MESSAGES=C
+I_KNOW_WHAT_I_AM_DOING=y
