--- a/etc/portage/repos.conf/local.conf
+++ b/etc/portage/repos.conf/local.conf
@@ -2,7 +2,7 @@
 main-repo = gentoo
 
 [local]
-location = /home/hexec/src/local
+location = /home/hexec/src/gentoo-local
 sync-type = git
 sync-uri = git://
 auto-sync = no
