--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -6,7 +6,7 @@ AR=gcc-ar
 NM=gcc-nm
 RANLIB=gcc-ranlib
 ABI_X86="64"
-CFLAGS="${BASEFLAGS} ${GRAPHITE} ${FLTO}"
+CFLAGS="${BASEFLAGS}" # ${GRAPHITE} ${FLTO}"
 CXXFLAGS="${CFLAGS}"
 LDFLAGS="-Wl,-O1 -Wl,--as-needed,--hash-style=gnu -fuse-linker-plugin"
 CHOST="x86_64-pc-linux-gnu"
@@ -35,7 +35,7 @@ REMOVE="-fam -cdio -kdbus -perl -recode -snappy -cdda -cddb -dvdr -dvd -upnp -dv
 	-smartcard -python_targets_pypy -http"
 USE="${REMOVE} ${ADD}"
 
-FEATURES="parallel-fetch parallel-install userfetch news sandbox cgroup nodoc" # clean-logs fail-clean"
+FEATURES="parallel-fetch parallel-install news sandbox cgroup nodoc" # clean-logs fail-clean"
 EMERGE_DEFAULT_OPTS='--quiet-build y --jobs 3 --load-average 5 --deep --keep-going \
 --verbose --verbose-conflicts --with-bdeps y --complete-graph --autounmask y --autounmask-write y --autounmask-keep-masks y'
 LINGUAS="en"
@@ -61,7 +61,7 @@ PORT_LOGDIR_CLEAN="find \"\${PORT_LOGDIR}\" -type f ! -name \"summary.log*\" -mt
 DISTDIR="/home/hexec/Downloads/tmp/distfiles"
 #FETCHCOMMAND="${FETCHCOMMAND} --limit-rate=100k"
 #RESUMECOMMAND="${RESUMECOMMAND} --limit-rate=100k"
-USE_PYTHON='3.6'
+USE_PYTHON='3.6 2.7'
 PYTHON_TARGETS="python3_6"
 PYTHON_SINGLE_TARGET="python3_6"
 RUBY_TARGETS="ruby24"
