--- a/etc/portage/repos.conf/gentoo-italia.conf
+++ b/etc/portage/repos.conf/gentoo-italia.conf
@@ -4,6 +4,6 @@ main-repo = gentoo
 [gentoo-italia]
 location = /home/hexec/src/gentoo-italia
 sync-type = git
-sync-uri = https://github.com/hexvar/gentoo-italia
+sync-uri = https://github.com/hexec/gentoo-italia
 auto-sync = yes
 clone-depth = 1
