--- a/etc/portage/repos.conf/gnome.conf
+++ b/etc/portage/repos.conf/gnome.conf
@@ -2,8 +2,8 @@
 main-repo = gentoo
 
 [gnome]
-location = /var/lib/repos/gnome
+location = /var/lib/overlays/gnome
 sync-type = git
 sync-uri = git://anongit.gentoo.org/proj/gnome.git
-auto-sync = yes
+auto-sync = no
 clone-depth = 1
