--- a/etc/portage/repos.conf/pentoo.conf
+++ b/etc/portage/repos.conf/pentoo.conf
@@ -2,8 +2,8 @@
 main-repo = gentoo
 
 [pentoo]
-location = /var/lib/repos/pentoo
+location = /var/lib/overlays/pentoo
 sync-type = git
 sync-uri = https://github.com/pentoo/pentoo-overlay
-auto-sync = yes
+auto-sync = no
 clone-depth = 1
