--- a/etc/portage/repos.conf/steam-overlay.conf
+++ b/etc/portage/repos.conf/steam-overlay.conf
@@ -2,8 +2,8 @@
 main-repo = gentoo
 
 [steam-overlay]
-location = /var/lib/repos/steam-overlay
+location = /var/lib/overlays/steam-overlay
 sync-type = git
 sync-uri = https://github.com/anyc/steam-overlay.git
-auto-sync = yes
+auto-sync = no
 clone-depth = 1
