--- a/etc/portage/repos.conf/zugaina.conf
+++ b/etc/portage/repos.conf/zugaina.conf
@@ -2,8 +2,8 @@
 main-repo = gentoo
 
 [zugaina]
-location = /var/lib/repos/zugaina
+location = /var/lib/overlays/zugaina
 sync-type = git
 sync-uri = https://github.com/gentoo-mirror/zugaina
-auto-sync = yes
+auto-sync = no
 clone-depth = 1
