--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -2,13 +2,13 @@ MARCH="native"
 GRAPHITE="-fgraphite-identity -floop-interchange -ftree-loop-distribution -floop-strip-mine -floop-block"
 FLTO="-flto=4"
 BASEFLAGS="-march=${MARCH} -mtune=${MARCH} -O2 -fomit-frame-pointer -pipe"
-AR=gcc-ar
-NM=gcc-nm
-RANLIB=gcc-ranlib
+#AR=gcc-ar
+#NM=gcc-nm
+#RANLIB=gcc-ranlib
 ABI_X86="64"
 CFLAGS="${BASEFLAGS}" # ${GRAPHITE} ${FLTO}"
 CXXFLAGS="${CFLAGS}"
-LDFLAGS="-Wl,-O1 -Wl,--as-needed,--hash-style=gnu -fuse-linker-plugin"
+#LDFLAGS="-Wl,-O1 -Wl,--as-needed,--hash-style=gnu -fuse-linker-plugin"
 CHOST="x86_64-pc-linux-gnu"
 MAKEOPTS="-j4 -l4"
 # install cpuid2cpuflags
@@ -17,11 +17,11 @@ CPU_FLAGS_X86="aes avx mmx mmxext popcnt sse sse2 sse3 sse4_1 sse4_2 ssse3"
 ADD="${CPU_FLAGX_X86}
 	mpeg mp4 vpx x264 x265 10bit matroska win32codecs lame mp3 flac faac opus vorbis openh264 \
 	webp gif svg png pdf djvu \
-	archive rar unrar lz4 xz \
+	archive rar 7z unrar lz4 xz \
 	device-mapper cryptsetup gpt fat ntfs btrfs parted aio \
-	graphite pie ssp lto cilk clang experimental custom-cflags \
+	graphite pgo pie ssp lto cilk clang experimental custom-cflags \
 	egl dri3 vdpau xwayland wayland wayland-compositor \
-	conntrack nftables netlink iproute2 samba ssh git meson \
+	conntrack nftables netlink iproute2 samba ssh git meson dbus \
 	systemd pulseaudio firmware symlink libinput ibus nautilus gvfs gtk3 vim system-* chromium"
 REMOVE="-fam -cdio -kdbus -perl -recode -snappy -cdda -cddb -dvdr -dvd -upnp -dvdnav -modemmanager -ppp -accessibility \
 	-glamor -guile -aalib -a52 -v4l -v4l2 -deprecated -bindist -consolekit -radeon -r300 -nokia -wicd \
@@ -35,7 +35,7 @@ REMOVE="-fam -cdio -kdbus -perl -recode -snappy -cdda -cddb -dvdr -dvd -upnp -dv
 	-smartcard -python_targets_pypy -http"
 USE="${REMOVE} ${ADD}"
 
-FEATURES="parallel-fetch parallel-install news sandbox cgroup nodoc" # clean-logs fail-clean"
+FEATURES="parallel-fetch parallel-install news userfetch sandbox cgroup nodoc" # clean-logs fail-clean"
 EMERGE_DEFAULT_OPTS='--quiet-build y --jobs 3 --load-average 5 --deep --keep-going \
 --verbose --verbose-conflicts --with-bdeps y --complete-graph --autounmask y --autounmask-write y --autounmask-keep-masks y'
 LINGUAS="en"
@@ -61,7 +61,7 @@ PORT_LOGDIR_CLEAN="find \"\${PORT_LOGDIR}\" -type f ! -name \"summary.log*\" -mt
 DISTDIR="/home/hexec/Downloads/tmp/distfiles"
 #FETCHCOMMAND="${FETCHCOMMAND} --limit-rate=100k"
 #RESUMECOMMAND="${RESUMECOMMAND} --limit-rate=100k"
-USE_PYTHON='3.6 2.7'
+USE_PYTHON='3.6'
 PYTHON_TARGETS="python3_6"
 PYTHON_SINGLE_TARGET="python3_6"
 RUBY_TARGETS="ruby24"
