--- a/etc/sysctl.conf
+++ b/etc/sysctl.conf
@@ -189,3 +189,10 @@ net.ipv6.route.flush = 1
 
 #net.ipv4.udp_rmem_min = 16384
 #net.ipv4.udp_wmem_min = 16384
+
+net.bridge.bridge-nf-call-ip6tables = 0
+net.bridge.bridge-nf-call-iptables = 0
+net.bridge.bridge-nf-call-arptables = 0
+net.bridge.bridge-nf-filter-vlan-tagged = 0
+bridge-nf-filter-pppoe-tagged = 0
+bridge-nf-pass-vlan-input-dev = 0
