--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -2,15 +2,12 @@ MARCH="native"
 GRAPHITE="-fgraphite-identity -floop-interchange -ftree-loop-distribution -floop-strip-mine -floop-block"
 FLTO="-flto=4"
 BASEFLAGS="-march=${MARCH} -mtune=${MARCH} -O2 -fomit-frame-pointer -pipe"
-#AR=gcc-ar
-#NM=gcc-nm
-#RANLIB=gcc-ranlib
 ABI_X86="64"
 CFLAGS="${BASEFLAGS}" # ${GRAPHITE} ${FLTO}"
 CXXFLAGS="${CFLAGS}"
-#LDFLAGS="-Wl,-O1 -Wl,--as-needed,--hash-style=gnu -fuse-linker-plugin"
 CHOST="x86_64-pc-linux-gnu"
 MAKEOPTS="-j4 -l4"
+
 # install cpuid2cpuflags
 CPU_FLAGS_X86="aes avx mmx mmxext popcnt sse sse2 sse3 sse4_1 sse4_2 ssse3"
 
@@ -35,7 +32,7 @@ REMOVE="-fam -cdio -kdbus -perl -recode -snappy -cdda -cddb -dvdr -dvd -upnp -dv
 	-smartcard -python_targets_pypy -http"
 USE="${REMOVE} ${ADD}"
 
-FEATURES="parallel-fetch parallel-install news userfetch sandbox cgroup nodoc" # clean-logs fail-clean"
+FEATURES="parallel-fetch parallel-install news userfetch sandbox cgroup nodoc clean-logs" # fail-clean"
 EMERGE_DEFAULT_OPTS='--quiet-build y --jobs 3 --load-average 5 --deep --keep-going \
 --verbose --verbose-conflicts --with-bdeps y --complete-graph --autounmask y --autounmask-write y --autounmask-keep-masks y'
 LINGUAS="en"
