update gentoo config

--- a/etc/portage/repos.conf/gnome-next.conf
+++ b/etc/portage/repos.conf/gnome-next.conf
@@ -4,6 +4,6 @@ main-repo = gentoo
 [gnome-next]
 location = /home/hexec/src/gentoo-gnome-heather
 sync-type = git
-sync-uri = https://github.com/hexec/gentoo-gnome
+sync-uri = https://github.com/heather/gentoo-gnome
 auto-sync = yes
 clone-depth = 1
