--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -6,7 +6,7 @@ ABI_X86="64"
 CFLAGS="${BASEFLAGS}" # ${GRAPHITE} ${FLTO}"
 CXXFLAGS="${CFLAGS}"
 CHOST="x86_64-pc-linux-gnu"
-MAKEOPTS="-j4 -l4"
+MAKEOPTS="-j4"
 
 # install cpuid2cpuflags
 CPU_FLAGS_X86="aes avx mmx mmxext popcnt sse sse2 sse3 sse4_1 sse4_2 ssse3"
@@ -55,7 +55,7 @@ PORTAGE_TMPDIR="/var/tmp"
 PORTAGE_ELOG_CLASSES="log warn error"
 PORT_LOGDIR="/var/tmp/"
 PORT_LOGDIR_CLEAN="find \"\${PORT_LOGDIR}\" -type f ! -name \"summary.log*\" -mtime +3 -delete"
-DISTDIR="/home/hexec/Downloads/tmp/distfiles"
+DISTDIR="/home/hexec/downloads/.tmp/distfiles"
 #FETCHCOMMAND="${FETCHCOMMAND} --limit-rate=100k"
 #RESUMECOMMAND="${RESUMECOMMAND} --limit-rate=100k"
 USE_PYTHON='3.6'
